--- a/src/main/java/org/jdbi/v3/oracle12/package.html
+++ b/src/main/java/org/jdbi/v3/oracle12/package.html
@@ -15,8 +15,6 @@
 -->
 <html><body>
 <p>
-The <code>oracle</code> package provides integration with the Oracle JDBC
-driver.  Note that oracle's restrictive license prevents core <code>jdbi</code>
-team from fully maintaining this driver.
+The <code>oracle</code> package provides integration with the Oracle JDBC driver.
 </p>
 </body></html>
